# Hangman

./: CMakeLists.txt  hangman.h  main.c  readme.md  test_main.c  utilities.c  utilities.h
game/: game.c  game.h  hangman.c  hangman.h
resources/textures/about_section/: about.txt
resources/words/: animals.txt  continents.txt  countries.txt
screens/: about_section.c  about_section.h  ingame_ui.c  ingame_ui.h  loading_screen.c  loading_screen.h  main_menu.c  main_menu.h
screens/graphics/: texture_manager.c  texture_manager.h
utility/: utilities.c  utilities.h
